--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@nextui-org/card": "^2.0.33",
     "@nextui-org/input": "^2.2.2",
     "@nextui-org/react": "^2.4.2",
     "@nextui-org/spinner": "^2.0.30",
@@ -21,6 +22,7 @@
     "framer-motion": "^11.2.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^4.0.13",
     "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.52.1",
     "react-hot-toast": "^2.4.1",
@@ -28,6 +30,7 @@
     "react-router-dom": "^6.24.1",
     "react-slick": "^0.30.2",
     "sanity": "^3.49.0",
+    "slick": "^1.12.2",
     "slick-carousel": "^1.8.1",
     "zod": "^3.23.8",
     "zustand": "^4.5.4"
